--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -60,8 +60,8 @@
       <div class="form-group">
         <%= f.label :tags, class: "col-lg-3 control-label" %>
         <div class="col-lg-8">
+          <em>Tags should be separated by commas.</em>
           <%= f.text_area :tag_list, class: "form-control", value: @statement.tag_list.reverse.join(", ") %>
-          <span>Tags should be separated by commas.</span>
         </div>
       </div>
       <div class="form-group">
