--- a/app/views/statements/_search_form.html.erb
+++ b/app/views/statements/_search_form.html.erb
@@ -60,7 +60,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
                   <div class="form-group">
                     <div id="from-date" class="col-sm-12 input-group">
-                      <label for="inputEmail3" class="col-sm-12">Event Date</label>
+                      <label for="inputEmail3" class="col-sm-12 thans">Event Date</label>
                       <div class='input-group date'>
                       <input name="from" type="text" class="datepicker form-control" placeholder="From" id="from_date"/>
                       <span class="input-group-addon">
@@ -75,7 +75,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
                   <div class="form-group">
                     <div id="to-date" class="col-sm-12 input-group">
-                      <label for="inputEmail3" class="col-sm-12">Event Date</label>
+                      <label for="inputEmail3" class="col-sm-12 thans">Event Date</label>
                       <div class='input-group date'>
                       <input name="to" type="text" class="datepicker form-control" placeholder="To" id="to_date"/>
                       <span class="input-group-addon">
