--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -28,7 +28,8 @@
           </div>
         </div>
         <div class="col-lg-12 candbgq2">
-          <h3>Position on Reform</h3>
+          <!-- <h3>Position on Reform</h3> -->
+          <h3></h3>
           <div class="candbgq11">
             <table class="table table-striped table-responsive table-bordered">
               <tbody>
@@ -64,29 +65,30 @@
             </table>
           </div>
           <p><%= raw(sanitize(@candidate.description, tags: SUPPORTED_HTML_TAGS)) %></p>
-          <h3>See More Answers From <%= @candidate.person_name %></h3>
+          <!-- <h3>See More Answers From <%= @candidate.person_name %></h3> -->
         </div>
-        <div class="col-lg-2 candbgq5">Search By: </div>
-        <div class="col-lg-3 candbgq5">Candidate Name<br>
-          <input type="text" placeholder="Hillary Clinton" class="form-control candbgq6"> 
-        </div>
-        <div class="col-lg-2 candbgq5">Topic <br>
-          <input type="text" placeholder="All" class="form-control candbgq7"> 
-        </div>
-        <div class="col-lg-2 candbgq5">State <br>
-          <input type="text" placeholder="All" class="form-control candbgq7"> 
-        </div>
-        <div class="col-lg-2 candbgq5">Date <br>
-          <input type="text" placeholder="All" class="form-control candbgq7"> 
-        </div>
-        <div class="col-lg-1 candbgq5">
-          <input type="submit" class="btn btn-info candbgq8" value="Go">
-        </div>
+        <!-- <div class="col-lg-2 candbgq5">Search By: </div>
+          <div class="col-lg-3 candbgq5">Candidate Name<br>
+            <input type="text" placeholder="Hillary Clinton" class="form-control candbgq6"> 
+          </div>
+          <div class="col-lg-2 candbgq5">Topic <br>
+            <input type="text" placeholder="All" class="form-control candbgq7"> 
+          </div>
+          <div class="col-lg-2 candbgq5">State <br>
+            <input type="text" placeholder="All" class="form-control candbgq7"> 
+          </div>
+          <div class="col-lg-2 candbgq5">Date <br>
+            <input type="text" placeholder="All" class="form-control candbgq7"> 
+          </div>
+          <div class="col-lg-1 candbgq5">
+            <input type="submit" class="btn btn-info candbgq8" value="Go">
+          </div>
+        </div> -->
       </div>
       <div class="col-lg-4">
         <%= render 'events', :panel_title => 'Upcoming Events', :events => @candidate.upcoming_events %>
         <%= render 'most_recent_videos', :videos => @videos %>
-        <div class="panel panel-primary">
+        <!-- <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Most Recent Transcript of Candidate</h3>
           </div>
@@ -96,7 +98,7 @@
               <li class="list-group-item" style="border: 0">October 13, 2015: <a href="#">Town Hall: John Kasich </a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
