--- a/app/views/statements/show.html.erb
+++ b/app/views/statements/show.html.erb
@@ -74,7 +74,7 @@
 <script type="text/javascript">
   $(document).on('click', '.edit-statement', function(){
     var id = $(this).attr('statement_id');
-    var path = "https://"+window.location.host+"/statements/"+id+"/edit";
+    var path = "http://"+window.location.host+"/statements/"+id+"/edit";
     window.location.href = path;
   });
 </script>
