--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -50,6 +50,12 @@
         </div>
       </div>
       <div class="form-group">
+        <%= f.label :transcript, class: "col-lg-3 control-label" %>
+        <div class="col-lg-8">
+          <%= f.text_area :transcript, class: "form-control", rows: 10 %>
+        </div>
+      </div>
+      <div class="form-group">
         <%= f.label :approved, class: "col-lg-3 control-label" %>
         <div class="col-lg-8 checkbox-left">
           <%= f.check_box :approved, class: "form-control" %>
