--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -28,39 +28,30 @@
           </div>
         </div>
         <div class="col-lg-12 candbgq2">
-          <h3>Position on Reform</h3>
+          <h3></h3>
           <div class="candbgq11">
             <table class="table table-striped table-responsive table-bordered">
-              <tbody>
-                <tr>
-                  <td class="candbgq3">TOPIC 1</td>
-                  <td valign="middle" align="center" class="candbgq3">TOPIC 2</td>
-                  <td valign="middle" align="center" class="candbgq3">TOPIC 3</td>
-                  <td valign="middle" align="center" class="candbgq3">TOPIC 4</td>
-                  <td valign="middle" align="center" class="candbgq3">TOPIC 5</td>
-                  <td valign="middle" align="center" class="candbgq3">TOPIC 6</td>
-                </tr>
-                <tr>
-                  <td align="center" valign="middle" class="candbgq10">
-                    <div class="ciclq_green"></div>
-                  </td>
-                  <td valign="middle" align="center"class="candbgq10">
-                    <div class="ciclq_green"></div>
-                  </td>
-                  <td valign="middle" align="center"class="candbgq10">
-                    <div class="ciclq_red"></div>
-                  </td>
-                  <td valign="middle" align="center"class="candbgq10">
-                    <div class="ciclq_gray"></div>
-                  </td>
-                  <td valign="middle" align="center"class="candbgq10">
-                    <div class="ciclq_red"></div>
-                  </td>
-                  <td valign="middle" align="center"class="candbgq10">
-                    <div class="ciclq_green"></div>
-                  </td>
-                </tr>
-              </tbody>
+              <% if @candidate.scaling.present? %>
+                <tbody>
+                  <tr>
+                    <% @candidate.scaling.keys.each do |k| %>
+                      <% if @candidate.scaling[k].present? %>
+                        <td class="candbgq3"><%= k %></td>
+                      <% end %>
+                    <% end %>
+                  </tr>
+                  <tr>
+                    <% @candidate.scaling.select{|k,v| v}.values.each do |v| %>
+                      <% if v.present? %>
+                      <td align="center" valign="middle" class="candbgq10">
+                        <div class="ciclq_green"></div>
+                        <span> <%= v %></span>
+                      </td>
+                      <% end %>
+                    <% end %>
+                  </tr>
+                </tbody>
+            <% end %>
             </table>
           </div>
           <p><%= raw(sanitize(@candidate.description, tags: SUPPORTED_HTML_TAGS)) %></p>
