--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -60,7 +60,7 @@
         <div class="col-lg-2 candbgq5">Search By: </div>
         <%= form_tag("/search_candidate", :method=>"get") do %>
           <div class="col-lg-2 candy1">Candidate Name<br>
-            <%=text_field_tag 'candidate_name', @candidate.person_name, class: "form-control candbgq6" %>
+            <%=text_field_tag 'candidate_name', @candidate.person_name, class: "form-control candbgq6", readonly: "" %>
           </div>
           <div class="col-lg-2 candy1">Topic <br>
             <%= select_tag(:candidate_issue, options_for_select(ISSUE_TAGS), class: "form-control candbgq7", :include_blank => 'All') %> 
