--- a/app/views/search/search_candidate.html.erb
+++ b/app/views/search/search_candidate.html.erb
@@ -6,6 +6,7 @@
 <% end %>
 <div class="container">
   <div class="row">
+    <h1 class="col-lg-12">Answers from <span class="candidate-name"><%= @candidate.person_name %></span></h1>
     <div class="clearfix"></div>
       <div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
         <div class="no-result-found alert alert-danger col-lg-12" style="display: none;">Sorry, We didn't find any result.
