Minor changes in view

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -75,7 +75,7 @@
           <div class="col-lg-2 candbgq5">
             <input type="submit" class="btn btn-info candbgq8" value="Go">
           </div>
-        <% end %>r
+        <% end %>
       </div>
       <div class="col-lg-4">
         <%= render 'events', :panel_title => 'Upcoming Events', :events => @candidate.upcoming_events %>
