--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -145,4 +145,8 @@ transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;}
 .candy1{margin:0px !important; padding:0px 10px 0px 0px !important;}
 
 .candidate-name{color:#f39c12;}
+.candbgq2-tb{margin:0px !important; padding:0px !important; }
+
+.candbgq11-tb table{width: 99.9%}
+.ryt-wrap-tx{word-wrap:break-word;}
 
