--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -12,5 +12,5 @@
   <%= render partial: "search_form" %>
 </div>
 <div class="container">
-  <%#= render 'videos' %>
+  <%= render 'videos' %>
 </div>
