--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -20,6 +20,9 @@
         <td>
           <%= link_to "#{ comment.status ? 'Unapprove' : 'Approve'}", comment_path(comment), method: 'PUT' %>
         </td>
+        <td>
+          <%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
